# datapruning

./: .gitignore
model_training/sana/: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  demo.py  environment_setup.sh  mkdocs.yml  pyproject.toml  req.txt  train.sh
model_training/sana/app/: app_sana.py  app_sana_inpaint.py  safety_check.py  sana_pipeline.py  sana_pipeline_inpaint.py
model_training/sana/asset/docs/: model_zoo.md  sana_sprint.md  sana_video.md
model_training/sana/asset/samples/: longsana_train.txt  longsana_val.txt  sample_i2v.txt  video_prompts_samples.txt
model_training/sana/configs/: sana_base.yaml
model_training/sana/configs/sana_video_config/: Sana_2000M_256px_AdamW_fsdp.yaml  Sana_2000M_480px_AdamW_fsdp.yaml  Sana_2000M_480px_AdamW_fsdp_chunk.yaml  Sana_2000M_480px_adamW_fsdp_longsana.yaml
model_training/sana/diffusion/: __init__.py
model_training/sana/diffusion/data/: builder.py  transforms.py
model_training/sana/diffusion/longsana/: sana_video_pipeline.py
model_training/sana/diffusion/model/: builder.py  edm_sample.py  gaussian_diffusion.py  model_growth_utils.py  repa_utils.py  respace.py  utils.py
model_training/sana/diffusion/scheduler/: dpm_solver.py  lcm_scheduler.py  (+4 more)
model_training/sana/docs/: 8bit_sana.md  index.md  installation.md  longsana.md  metrics_toolkit.md  model_zoo.md  requirements.txt  sana.md  sana_sprint.md  sana_video.md  sana_video_inference.md
model_training/sana/inference_video_scripts/: inference_sana_video.py  inference_sana_video.sh
model_training/sana/scripts/: inference_geneval_diffusers.py  inference_sana_sprint.py  sync_docs.py
model_training/sana/tools/: create_wids_metadata.py  download.py  download_fine_t2i.py
model_training/sana/train_scripts/: train.py  train.sh  train_scm_ladd.py  train_scm_ladd.sh
model_training/sana/train_video_scripts/: train_longsana.py  train_longsana.sh  train_video_ivjoint.py  train_video_ivjoint.sh  train_video_ivjoint_chunk.py  train_video_ivjoint_chunk.sh
model_training/sana/updates/: plan1.md
(+103 files in other folders)
